<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/portrait_background_v3"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:fontFamily="sans-serif-black"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:text="@string/appName"
            android:textAlignment="textStart"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/scoreArea"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/score_container_shapes"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtCurrentScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblCurrentScore"
                android:textAlignment="center"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/txtScoreNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="0"
                android:textAlignment="center"
                android:textSize="80sp" />

            <TextView
                android:id="@+id/txtCurrentHold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/hold_text_shape"
                android:paddingLeft="30dp"
                android:paddingTop="7dp"
                android:paddingRight="30dp"
                android:paddingBottom="7dp"
                android:text="@string/lblNotClimbed"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/coreFunctions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClimb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/btnClimb" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2" />

            <Button
                android:id="@+id/btnFall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/btnFall" />
        </LinearLayout>

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/btnReset" />

    </LinearLayout>
</LinearLayout>